# pkmn-3rd-gen-hex

./: README.md  devbox.json  pkmn-hex-visualizer.py  pyproject.toml
pkm3-hex/: __init__.py  __main__.py  mail_glitch.py  mail_words.py  pc_pkm.py  pkm.py  pkm_pc.py
pkm3-hex/data/: IndexedItem.py  __init__.py  easy_chat.py  items.py  locations.py  moves.py  pkm_species.py
pkm3-hex/utils/: GameSaveBlock.py  MailWords.py  Pkm.py  PkmSubstructures.py  __init__.py  bytes_handling.py  json.py  mail_glitch.py  parse_bytes.py  pretty_print.py
