[project]
name = "pkm3-hex"
version = "0.1.0"
description = """
    Hexadecimal visualization and extraction tools for third generation
    Pokémon data structures.
    """
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["black>=25.1.0", "isort>=6.0.1"]

[tool.isort]
profile = "black"
