[project]
name = "pkm3-hex"
version = "0.1.0"
description = """
    Hexadecimal visualization and extraction tools for third generation
    Pokémon data structures.
    """
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer>=0.15.3"]

[dependency-groups]
dev = ["black>=25.1.0", "isort>=6.0.1", "mypy>=1.15.0"]

[tool.isort]
profile = "black"
